--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ mysqlclient==2.1.0
 pycparser==2.21
 PyJWT==2.4.0
 PyMySQL==1.0.2
+python-dotenv==0.20.0
 six==1.16.0
 SQLAlchemy==1.4.37
 Werkzeug==2.1.2
