--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ bcrypt==3.2.2
 cffi==1.15.0
 click==8.1.3
 colorama==0.4.5
+et-xmlfile==1.1.0
 Flask==2.1.2
 Flask-Bcrypt==1.0.1
 Flask-Cors==3.0.10
@@ -15,6 +16,7 @@ mariadb==1.0.11
 MarkupSafe==2.1.1
 mysql==0.0.3
 mysqlclient==2.1.0
+openpyxl==3.0.10
 pycparser==2.21
 PyJWT==2.4.0
 PyMySQL==1.0.2
@@ -24,4 +26,5 @@ SQLAlchemy==1.4.37
 Werkzeug==2.1.2
 wtf==0.1
 WTForms==3.0.1
+XlsxWriter==3.0.3
 zipp==3.8.0
